<resources>
    <string name="app_name">葛葛</string>
    <string-array name="function_list">
        <item>可设置背景透明度Activity</item>
        <item>依赖注入</item>
        <item>RxAndroid</item>
        <item>MVP</item>
        <item>Annotation</item>
        <item>线程池</item>
        <item>菜单</item>
        <item>图片压缩</item>
        <item>OkHttp</item>
        <item>Snackbar</item>
        <item>Animation动画</item>
        <item>功能12</item>
        <item>功能13</item>
        <item>功能14</item>
        <item>功能15</item>
        <item>功能16</item>
        <item>功能17</item>
        <item>功能18</item>
        <item>功能19</item>
        <item>功能20</item>
        <item>功能21</item>
        <item>功能22</item>
        <item>功能23</item>
        <item>功能24</item>
        <item>功能25</item>
        <item>功能26</item>
        <item>功能27</item>
        <item>功能28</item>
        <item>功能29</item>
        <item>功能30</item>
        <item>功能31</item>
        <item>功能32</item>
        <item>功能33</item>
        <item>功能34</item>
        <item>功能35</item>
        <item>功能36</item>
        <item>功能37</item>
        <item>功能38</item>
        <item>功能39</item>
    </string-array>
    <string name="loading">正在加载</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码?</string>
    <string name="user_name">用户名</string>
    <string name="password">登录密码</string>
    <string name="user_name_litmit">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLNMOPQRSTUVWXYZ</string>
</resources>
