<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_name"
            android:hint="@string/user_name"
            android:gravity="center"
            android:background="@drawable/login_edit_background"
            android:layout_marginTop="@dimen/dim_20"
            android:layout_width="match_parent"
            android:digits="@string/user_name_litmit"
            android:layout_height="@dimen/dim_40"
            android:layout_marginLeft="@dimen/dim_30"
            android:layout_marginRight="@dimen/dim_30" />

        <EditText
            android:id="@+id/et_user_password"
            android:hint="@string/password"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_background"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="@dimen/dim_40"
            android:layout_marginLeft="@dimen/dim_30"
            android:layout_marginRight="@dimen/dim_30" />
        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_button" />
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_30"
        android:layout_marginBottom="@dimen/forget_password_margin"/>
</LinearLayout>